Update Personal Page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
   <html>
-
   <head>
         <meta charset="UTF-8">
         <title>
@@ -8,11 +7,19 @@
         </title>
   </head>
   <body>
+      <h1>
+          This is the first web Page of Haitian Xu 
+      </h1>
+      <h1>
+          这是徐海天的第一个个人主页
+      </h1>
       <p1>
+        大家好，我的名字是徐海天
 
-               This is the first web Page of Haitian Xu 这是徐海天的第一个个人主页
       </p1>
+      <p1>
+          Hello everyone, my name is Haitian Xu, TonyMisaka
+      </p1>
+      
   </body>
-
-
   </html>
