Update web link

--- a/index.html
+++ b/index.html
@@ -8,18 +8,30 @@
   </head>
   <body>
       <h1>
-          This is the first web Page of Haitian Xu 
+          This is the web Page of Haitian Xu 
       </h1>
       <h1>
-          这是徐海天的第一个个人主页
+          这是徐海天的个人主页
       </h1>
-      <p1>
-        大家好，我的名字是徐海天
-
-      </p1>
+      <hr>
       <p1>
           Hello everyone, my name is Haitian Xu, TonyMisaka
       </p1>
-      
+        <p1>
+        大家好，我的名字是徐海天
+      </p1>
+      <h3>
+          Below are the common web link of Haitian Xu
+      </h3>
+      <h3>下面是徐海天的一些个人网页索引</h3>
+      <hr>
+      <a href="www.google.com">Google Search谷歌搜索</a>
+      <hr>   
+      <a href="https://www.baidu.com/">Baidu 百度搜索</a>
+      <hr>
+      <a href="https://space.bilibili.com/32387866">Bilibili B站主页</a>
+      <hr>
+      <a href="https://github.com/Tonymisaka">Github Homepage 主页</a>
+
   </body>
   </html>
