--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
       <a href="https://space.bilibili.com/32387866">Bilibili B站主页</a>
       <hr>
       <a href="https://github.com/Tonymisaka">Github Homepage 主页</a>
+      <hr>
+      <h3>
+       Below is one of Haitian Xu's Testing Vlog
+      </h3>
+      <h3>
+       下面是徐海天的一个测试vlog
+      </h3>
+      <hr>
+        <video src=".\Testing.mp4" width="960" height="540" controls="controls">大学vlog</video>
 
   </body>
   </html>
