--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         </title>
   </head>
   <body style="background: rgb(255, 251, 235);">
-      <img src="./LOFO.png" height="110" width="320" style="position: absolute; left: 2%; top: 2%; vertical-align: auto; margin-right: 10px;">
-      <h1 style="text-align: center; color: rgb(226, 27, 110); margin-left: 10px; vertical-align: auto;">
+      <img src="./LOFO.png" height="11%" width="%35" style="position: absolute; left: 2%; top: 2%; vertical-align: auto; margin-right: 10px;">
+      <hr>
+      <h1 style="text-align: center; color: rgb(226, 27, 110); margin-top: 130px; vertical-align: 130px;">
           This is the web Page of Haitian Xu 
       </h1>
       <h1 style="text-align: center; color: rgb(25, 150, 207); vertical-align: auto;">
           这是徐海天的个人主页
       </h1>
-      
+      <hr>
       <p1 style="color:blueviolet;">
           Hello everyone, my name is Haitian Xu, TonyMisaka
       </p1>
