Update color, logo. music

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
             TonyMisaka's Web
         </title>
   </head>
-  <body style="background: rgb(255, 251, 235);">
-      <img src="./LOFO.png" height="11%" width="%35" style="position: absolute; left: 2%; top: 2%; vertical-align: auto; margin-right: 10px;">
-      <hr>
-      <h1 style="text-align: center; color: rgb(226, 27, 110); margin-top: 130px; vertical-align: 130px;">
+  <body style="background: rgb(253, 250, 239);">
+      <img src="./LOFO.png" height="110px" width="335px">
+      
+      <h1 style="text-align: center; color: rgb(226, 27, 110); margin-top: 5px; ">
           This is the web Page of Haitian Xu 
       </h1>
       <h1 style="text-align: center; color: rgb(25, 150, 207); vertical-align: auto;">
@@ -22,10 +22,10 @@
         <p1 style="color:blueviolet;">
         大家好，我的名字是徐海天
       </p1>
-      <h3>
-          Below are the common web link of Haitian Xu
+      <h3 style="color: hsl(219, 70%, 51%);">
+         <b style="color: deeppink;">Function (1)</b>: Below are the common web link of Haitian Xu
       </h3>
-      <h3>下面是徐海天的一些个人网页索引</h3>
+      <h3 style="color: hsl(219, 70%, 51%);"><b style="color: deeppink;">功能1</b>:下面是徐海天的一些个人网页索引</h3>
       <hr>
       <a href="https://www.google.com">Google Search谷歌搜索</a>
       <hr>   
@@ -35,14 +35,25 @@
       <hr>
       <a href="https://github.com/Tonymisaka">Github Homepage 主页</a>
       <hr>
-      <h3>
-       Below is one of Haitian Xu's Testing Vlog
+      <h3 style="color: hsl(219, 70%, 51%);">
+       <b style="color: deeppink;">Function (2)</b>: Below is one of Haitian Xu's Testing Vlog
       </h3>
-      <h3>
-       下面是徐海天的一个测试vlog
+      <h3 style="color: hsl(219, 70%, 51%);">
+       <b style="color: deeppink;">功能2</b>:下面是徐海天的一个测试vlog
       </h3>
       <hr>
         <video src=".\Testing.mp4" width="960" height="540" controls="controls">大学vlog</video>
+      <hr>
+      <h3 style="color: hsl(219, 70%, 51%);">
+        <b style="color: deeppink;">Function (3)</b>: Below is one of Haitian Xu's favourite music Nothing needs worry too much
+       </h3>
+       <h3 style="color: hsl(219, 70%, 51%);">
+        <b style="color: deeppink;">功能3</b>:下面是徐海天喜欢的一首歌《なんでもないや没什么大不了的》by Akie秋绘
+       </h3>
+       <hr>
+       <audio src="./nothing.mp3" controls="controls">
+           《なんでもないや没什么大不了的》
+       </audio>
 
   </body>
   </html>
