--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <b style="color: deeppink;">功能2</b>:下面是徐海天的一个测试vlog
       </h3>
       <hr>
-        <video src=".\Testing.mp4" width=36% height=20.25% controls="controls">大学vlog</video>
+        <video src=".\Testing.mp4" width=960 height=540 controls="controls">大学vlog</video>
       <hr>
       <h3 style="color: hsl(219, 70%, 51%);">
         <b style="color: deeppink;">Function (3)</b>: Below is one of Haitian Xu's favourite music Nothing needs worry too much
