--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
   <head>
         <meta charset="UTF-8">
-        <link href="./logo.ico" type="image/x-icon" rel="shortcut icon">
+        <link href="./favicon.ico" type="image/x-icon" rel="shortcut icon">
         <title>
             TonyMisaka's Web
         </title>
