--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
   <head>
         <meta charset="UTF-8">
-        <link href="./favicon.ico" type="image/x-icon" rel="shortcut icon">
+        <link href="./favicon.png" type="image/png" rel="icon" size="32x32">
         <title>
             TonyMisaka's Web
         </title>
