--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
         徐海天来自中国，目前就读于美国威斯康星大学麦迪逊分校，本科计算机科学系，致力于Java后端开发，Web前后端全栈开发学习，常用Java，HTML，CSS，JS等通用编程语言 &nbsp; 
        </p>
        <div style="text-align: center;">
-        <img style="text-align: center;" src="./hx.JPG" width="120" height="120">
+        中国联系电话 (Chinese Telephone): <b>18012677016</b><br>
+        美国联系电话 (U.S. Telephone):<b>6089492636</b>  <br>
+        微信 (WeChat):<b> S080242SEAREDSTAR</b>
       </div>
        
       </p>
