--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </title>
         
   </head>
-      <!--大标题-->
+     <!--大标题-->
       <div>
         <img src="./LOFO.png" height="110px" width="390px">
       
@@ -89,7 +89,6 @@
         </div>
        </div>
 
-
        <!--music错位时空-->
        <div>
         <h3 style="color: rgb(41, 107, 168); text-align: center;margin-top: 100px;">
@@ -134,26 +133,27 @@
        <h2 style="text-align: center; color:rgb(73, 73, 73)">Development log</h2>
        <h2 style="text-align: center; color:rgb(77, 77, 77)">开发日志</h2>
        <div style="text-align: center;">
-         <p>
-           [12.30.2021] "Create and upload the index.html file" "adjust the environment for page deployment"<br>
-           [1.1.2022] "Add the main title" "Add the major web links of Haitian Xu" <br>
-           [1.2.2022] "Upload testing video to the page"<br>
-           [1.3.2022] "Add pictures to the web links" "create main logo on the front page" "Add music nothing is important"<br>
-           [1.4.2022] "Upload README.md" "Update UI style" "Upload music After Dark" "Test web page on android app" <br>   
-           [1.5.2022] "add icon for page through link element" "add iframe link to Bing and a clock" "redesign whole style" "replace web links with image input buttons"<br>
-           [1.7.2022] "add technical blog iframe page to the front of the page" "add life blog page to the page" “Add about author Page"<br>
-           [1.9.2022] "add new song to page and delete one song" "update divdion(div) element to replace p element"<br>
-         </p>
+         <pre>
+           [12.30.2021] "Create and upload the index.html file" "adjust the environment for page deployment"
+           [1.1.2022] "Add the main title" "Add the major web links of Haitian Xu" 
+           [1.2.2022] "Upload testing video to the page"
+           [1.3.2022] "Add pictures to the web links" "create main logo on the front page" "Add music nothing is important"
+           [1.4.2022] "Upload README.md" "Update UI style" "Upload music After Dark" "Test web page on android app"    
+           [1.5.2022] "add icon for page through link element" "add iframe link to Bing and a clock" "redesign whole style" "replace web links with image input buttons"
+           [1.7.2022] "add technical blog iframe page to the front of the page" "add life blog page to the page" “Add about author Page"
+           [1.9.2022] "add new song to page and delete one song" "update divdion(div) element to replace p element"
+         </pre>
         </div>
       </div>
+
       <!--尾页-->
-       <p style="background-color: rgb(224, 224, 224);">
+      <div>
          <hr style="margin-top: 150px;">
-       <h1 style="color: rgb(41, 107, 168); text-align: center; ">Thanks for your patience, Updating in progress ！！</h1>
-       <h1 style="color: rgb(255, 255, 255); text-align: center; text-shadow:3px 3px 3px black;">感谢大家的支持,本页持续更新中,求赞助 ！！</h1>
-       <h1 style="text-align: center;">
-        <img src="./wec.jpg" height="300px" width="215px">
-       </h1>
-      </p>
+         <h1 style="color: rgb(41, 107, 168); text-align: center; ">Thanks for your patience, Updating in progress ！！</h1>
+         <h1 style="color: rgb(255, 255, 255); text-align: center; text-shadow:3px 3px 3px black;">感谢大家的支持,本页持续更新中,求赞助 ！！</h1>
+         <div style="text-align: center;">
+          <img src="./wec.jpg" height="300px" width="215px">
+         </div>
+      </div>
   </body>
   </html>
