--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
           <p>
             徐海天来自中国，目前就读于美国威斯康星大学麦迪逊分校，本科计算机科学系，致力于Java后端开发，Web前后端全栈开发学习，常用Java，HTML，CSS，JS等通用编程语言 &nbsp; 
           </p>
-          <p>
+          <div>
            中国联系电话 (Chinese Telephone): <b>18012677016</b><br>
            美国联系电话 (U.S. Telephone): <b>6089492636</b>  <br>
            微信 (WeChat):<b> S080242SEAREDSTAR</b>
-          </p>
+          </div>
         </div>
       </div>>
 
@@ -133,16 +133,16 @@
        <h2 style="text-align: center; color:rgb(73, 73, 73)">Development log</h2>
        <h2 style="text-align: center; color:rgb(77, 77, 77)">开发日志</h2>
        <div style="text-align: center;">
-         <pre>
-           [12.30.2021] "Create and upload the index.html file" "adjust the environment for page deployment"
-           [1.1.2022] "Add the main title" "Add the major web links of Haitian Xu" 
-           [1.2.2022] "Upload testing video to the page"
-           [1.3.2022] "Add pictures to the web links" "create main logo on the front page" "Add music nothing is important"
-           [1.4.2022] "Upload README.md" "Update UI style" "Upload music After Dark" "Test web page on android app"    
-           [1.5.2022] "add icon for page through link element" "add iframe link to Bing and a clock" "redesign whole style" "replace web links with image input buttons"
-           [1.7.2022] "add technical blog iframe page to the front of the page" "add life blog page to the page" “Add about author Page"
-           [1.9.2022] "add new song to page and delete one song" "update divdion(div) element to replace p element"
-         </pre>
+         <p>
+           [12.30.2021] "Create and upload the index.html file" "adjust the environment for page deployment"<br>
+           [1.1.2022] "Add the main title" "Add the major web links of Haitian Xu" <br>
+           [1.2.2022] "Upload testing video to the page"<br>
+           [1.3.2022] "Add pictures to the web links" "create main logo on the front page" "Add music nothing is important"<br>
+           [1.4.2022] "Upload README.md" "Update UI style" "Upload music After Dark" "Test web page on android app"<br>    
+           [1.5.2022] "add icon for page through link element" "add iframe link to Bing and a clock" "redesign whole style" "replace web links with image input buttons"<br>
+           [1.7.2022] "add technical blog iframe page to the front of the page" "add life blog page to the page" “Add about author Page"<br>
+           [1.9.2022] "add new song to page and delete one song" "update divdion(div) element to replace p element" <br>
+         </p>
         </div>
       </div>
 
