Update video ratio and content

--- a/index.html
+++ b/index.html
@@ -38,24 +38,21 @@
        <iframe src="./LifeBlog.html" width="80%" height="700" name="blog"></iframe>   
       </div>
      
-      <!--内嵌外链搜索页面+时钟-->
+      <!--内嵌外链时钟-->
       <div style="text-align: center; margin-top: 100px;">
-      <iframe src="https://www.bing.com/" width="60%" height="600" name="bing"></iframe>    
-        <div style="margin-top: 100px;text-align: center;">
-          <iframe src="https://vclock.com/ " width="60%" height="300" name="clock"></iframe>
-        </div>                      
+          <iframe src="https://vclock.com/ " width="60%" height="300" name="clock"></iframe>          
       </div>
     
-      <!--测试视频-->
+      <!--代码展示-->
       <div>
         <h3 style="color: rgb(41, 107, 168); text-align: center;margin-top: 100px; ">
-        This is a Testing Vlog 
+        Here are the code of this page [Latest in 2022.1.10]
         </h3>
          <h3 style="color: rgb(255, 255, 255); text-align: center; text-shadow:3px 3px 3px black;">
-           这是一个测试记录视频
+           这是一个本页代码展示视频
         </h3>
         <div style="text-align: center; ">
-          <video src=".\Testing.mp4" width=100% height=530px controls="controls">大学vlog</video>
+          <video src="./codeR.mp4" width=80% controls="controls">代码展示</video>
         </div>
       </div>
 
@@ -142,6 +139,7 @@
            [1.5.2022] "add icon for page through link element" "add iframe link to Bing and a clock" "redesign whole style" "replace web links with image input buttons"<br>
            [1.7.2022] "add technical blog iframe page to the front of the page" "add life blog page to the page" “Add about author Page"<br>
            [1.9.2022] "add new song to page and delete one song" "update divdion(div) element to replace p element" <br>
+           [1.10.2022] "Update video size to fit for different window ratio" "remove the Bing iframe page" "Replace old video with new code display"
          </p>
         </div>
       </div>
