Big Update! Replace iframes and redesign Blogs

--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -3,19 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Data Structure and Algorithm</title>
+    <style>
+       a{
+        text-decoration: none;
+
+       }
+       h1{
+         text-align: center;
+         color: rgb(71, 109, 179);
+       }
+
+    </style>
   </head>
+
   <body>
-   <h3>
+   <!--导航栏-->
+   <div>
+    <img src="./LOFO.png" height="110px" width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="./index.html" style="vertical-align: middle; font-size: 30px">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="./TechBlog.html" style="vertical-align: middle; font-size: 30px">综合技术博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="LifeBlog.html" style="vertical-align: middle; font-size: 30px">日常生活博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="./index.html#author" style="vertical-align: middle; font-size: 30px">关于作者</a>
+   </div>
+
+   <!--大标题-->
+   <h1>
+    Data Structure and Algorithm note<br>
+    数据结构与算法技术笔记
+   </h1>
+   
+   <!--介绍-->
+   <div>
+     <h3>
        Introduction<br>
        简介
-   </h3>
-   <p>
-    数据结构(Data Structure) 是计算机存储、组织数据的方式。数据结构是指相互之间存在一种或多种特定关系的数据元素的集合。通常情况下，精心选择的数据结构可以带来更高的运行或者存储效率。数据结构往往同高效的检索算法和索引技术有关
-   </p>
-   <p>
-    算法(Algorithm)是指解题方案的准确而完整的描述，是一系列解决问题的清晰指令，算法代表着用系统的方法描述解决问题的策略机制。也就是说，能够对一定规范的输入，在有限时间内获得所要求的输出。如果一个算法有缺陷，或不适合于某个问题，执行这个算法将不会解决这个问题。不同的算法可能用不同的时间、空间或效率来完成同样的任务。一个算法的优劣可以用空间复杂度与时间复杂度来衡量。
-   </p>
- 
+     </h3>
+     <p>
+       数据结构(Data Structure) 是计算机存储、组织数据的方式。数据结构是指相互之间存在一种或多种特定关系的数据元素的集合。通常情况下，精心选择的数据结构可以带来更高的运行或者存储效率。数据结构往往同高效的检索算法和索引技术有关
+     </p>
+     <p>
+       算法(Algorithm)是指解题方案的准确而完整的描述，是一系列解决问题的清晰指令，算法代表着用系统的方法描述解决问题的策略机制。也就是说，能够对一定规范的输入，在有限时间内获得所要求的输出。如果一个算法有缺陷，或不适合于某个问题，执行这个算法将不会解决这个问题。不同的算法可能用不同的时间、空间或效率来完成同样的任务。一个算法的优劣可以用空间复杂度与时间复杂度来衡量。
+     </p>
+   </div>
+
+
+
+
+
+
+
+
 
   </body>
 </html>
