--- a/TechBlog.html
+++ b/TechBlog.html
@@ -5,42 +5,80 @@
     <title>
        Haitian Xu's blog
     </title>
-</head>
+    <style>
+     a{
+        text-decoration: none;
+     }
 
+     h2{
+
+        color: darkmagenta;
+     }
+
+    </style>
+</head>
 <body>
-   <h1 style="text-align: center; color: rgb(110, 110, 110);">
+    <!--导航栏-->
+    <div>
+        <img src="./LOFO.png" height="110px" width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./index.html" style="vertical-align: middle; font-size: 30px">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./TechBlog.html" style="vertical-align: middle; font-size: 30px">综合技术博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="LifeBlog.html" style="vertical-align: middle; font-size: 30px">日常生活博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./index.html#author" style="vertical-align: middle; font-size: 30px">关于作者</a>
+    </div>
+
+   <div>
+   <h1 style="text-align: center; color: rgb(35, 67, 136);">
      Mixed Technical Blog <br>
        综合技术博客
    </h1>
-  
-   <h2 style="color: rgb(13, 168, 173);">
-       &nbsp;&nbsp;Part1: Data Structure and Algorithm<br>
-       &nbsp;&nbsp;第一部分：数据结构与算法
-       <div style="text-align: center;">
-        <iframe src="./DataAlgo.html" width="100%" height="500"></iframe>
-       </div>
-   </h2>
+   <br>
+   </div>
 
-   
-   <h2 style="margin-top: 100px; color: rgb(13, 168, 173);">
-       &nbsp;&nbsp;Part2: Principle of computer organization<br>
-       &nbsp;&nbsp;第二部分：计算机组成原理
-   </h2>
-   <p>
-       Under Development<br>
-       开发中
-   </p>
+   <!--数据结构与算法块-->
+   <div>
+      <h2 style="color: rgb(13, 168, 173); text-align: center;">
+        &nbsp;&nbsp;Part1: Data Structure and Algorithm<br>
+        &nbsp;&nbsp;第一部分：数据结构与算法
+      </h2>
+      <h4 style="text-align: center; color: cornflowerblue;">
+          点击下方图片打开笔记-click on the following photo to open note
+      </h4>
+      <br>
+      <div style="text-align: center;">
+         <a href="./DataAlgo.html">
+            <img src="./DataAl.png" width="60%">
+         </a>
+      </div>
+   </div>
 
-   
-   <h2 style="margin-top: 100px; color: rgb(13, 168, 173);">
-       &nbsp;&nbsp;Part2: Java Programming Technology<br>
-       &nbsp;&nbsp;第二部分：Java 编程技术
-   </h2>
-   <p>
-    Under Development<br>
-    开发中
-</p>
+   <!--计算机组成原理块-->
+   <div>
+    <h2 style="color: rgb(13, 168, 173); text-align: center; margin-top: 100px;">
+      &nbsp;&nbsp;Part2: Principle of computer organization<br>
+      &nbsp;&nbsp;第一部分：计算机组成原理
+    </h2>
+    <br>
+      <div style="text-align: center;">
+         <h2>
+             开发中！尽请期待！
+         </h2>      
+     </div>
+   </div>
 
+   <!--JAVA块-->
+   <div>
+    <h2 style="color: rgb(13, 168, 173); text-align: center; margin-top: 100px;">
+      &nbsp;&nbsp;Part3: Java Programming Technology<br>
+      &nbsp;&nbsp;第三部分：Java 编程技术
+    </h2>
+    <br>
+      <div style="text-align: center;">
+         <h2>
+             开发中！尽请期待！
+         </h2>      
+     </div>
+   </div>
 
 </body>
 
