--- a/TechBlog.html
+++ b/TechBlog.html
@@ -6,9 +6,10 @@
        Haitian Xu's blog
     </title>
     <style>
-     a{
-        text-decoration: none;
-     }
+        a{
+               text-decoration: none;
+               color: rgb(92, 58, 146);
+         }
 
      h2{
 
