--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <style>
          a{
                text-decoration: none;
+               color: rgb(92, 58, 146);
          }
 
         </style>
