--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
            微信 (WeChat):<b> S080242SEAREDSTAR</b>
           </div>
         </div>
-      </div>>
+      </div>
 
       <!--开发日志-->
       <div>
