--- a/TechBlog.html
+++ b/TechBlog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-       Haitian Xu's blog
+      TechBlog
     </title>
     <style>
         a{
@@ -57,7 +57,7 @@
    <div>
     <h2 style="color: rgb(13, 168, 173); text-align: center; margin-top: 100px;">
       &nbsp;&nbsp;Part2: Principle of computer organization<br>
-      &nbsp;&nbsp;第一部分：计算机组成原理
+      &nbsp;&nbsp;第二部分：计算机组成原理
     </h2>
     <br>
       <div style="text-align: center;">
