Add links to email and phone number

--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
             徐海天来自中国，目前就读于美国威斯康星大学麦迪逊分校，本科计算机科学系，致力于Java后端开发，Web前后端全栈开发学习，常用Java，HTML，CSS，JS等通用编程语言 &nbsp; 
           </p>
           <div>
-           中国联系电话 (Chinese Telephone): <b>18012677016</b><br>
-           美国联系电话 (U.S. Telephone): <b>6089492636</b>  <br>
-           微信 (WeChat):<b> S080242SEAREDSTAR</b>
+           中国联系电话 (Chinese Telephone): <a href="tel:18012677016">18012677016</a><br>
+           美国联系电话 (U.S. Telephone):  <a href="tel:6089492636">6089492636</a> <br>
+           微信 (WeChat):<b> S080242SEAREDSTAR</b> <br>
+           邮箱 (email): <a href="mailto:hxu339@wisc.edu?subject=homepage%20email">hxu339@wisc.edu</a>
           </div>
         </div>
       </div>
@@ -162,7 +163,8 @@
            [1.9.2022] "add new song to page and delete one song" "update divdion(div) element to replace p element" <br>
            [1.10.2022] "Update video size to fit for different window ratio" "remove the Bing iframe page" "Replace old video with new code display"
            "Add raw directive bar and remove the iframe Technical blog to two links" "add about author to the raw bar" "Update download function of the music"
-           "remove the colock iframe page"
+           "remove the colock iframe page"<br>
+           [1.11.2022] "Add email and telephone links to about author"
          </p>
         </div>
       </div>
