Update direct bar and links plus english

--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -18,11 +18,25 @@
   <body>
    <!--导航栏-->
    <div>
-    <img src="./LOFO.png" height="110px" width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="./index.html" style="vertical-align: middle; font-size: 30px">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="./TechBlog.html" style="vertical-align: middle; font-size: 30px">综合技术博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="LifeBlog.html" style="vertical-align: middle; font-size: 30px">日常生活博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="./index.html#author" style="vertical-align: middle; font-size: 30px">关于作者</a>
+    <div style="display: inline-block;">
+        <img src="./LOFO.png"  width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+       </div>
+       <div style="text-align: center; display: inline-block; vertical-align:-20px; margin-left: 20px; margin-right: 20px;">
+         <a href="./index.html" style="vertical-align: middle; font-size: 30px; ">首页</a>
+         <p style="margin-top: 0px;">HomePage</p>
+       </div>
+       <div style="text-align: center; display: inline-block;vertical-align:-20px; margin-left: 20px; margin-right: 20px;">
+         <a href="./TechBlog.html" style="vertical-align: middle; font-size: 30px;">综合技术博客</a>
+         <p style="margin-top: 0px;">Mixed Technical Blog</p>  
+       </div>
+       <div style=" text-align: center; display: inline-block; vertical-align:-20px;  margin-left: 20px; margin-right: 20px;">
+         <a href="./LifeBlog.html" style="vertical-align: middle; font-size: 30px;">日常生活博客</a>
+         <p style="margin-top: 0px;">Daily Life Blog</p>
+       </div>
+       <div style="text-align: center; display: inline-block; vertical-align:-20px;  margin-left: 20px; margin-right: 20px;">
+         <a href="./index.html#author" style="vertical-align: middle; font-size: 30px;">关于作者</a> 
+         <p style="margin-top: 0px;">About the author</p>
+       </div>
    </div>
 
    <!--大标题-->
