--- a/index.html
+++ b/index.html
@@ -17,12 +17,27 @@
   <body>
      <!--导航栏-->
       <div>
-        <img src="./LOFO.png" height="110px" width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./index.html" style="vertical-align: middle; font-size: 30px">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./TechBlog.html" style="vertical-align: middle; font-size: 30px">综合技术博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="LifeBlog.html" style="vertical-align: middle; font-size: 30px">日常生活博客</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#author" style="vertical-align: middle; font-size: 30px">关于作者</a>
-
+         <div>
+            <div style="display: inline-block;">
+              <img src="./LOFO.png"  width="390px" style="vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+             </div>
+             <div style="text-align: center; display: inline-block; vertical-align:-20px; margin-left: 20px; margin-right: 20px;">
+               <a href="./index.html" style="vertical-align: middle; font-size: 30px; ">首页</a>
+               <p style="margin-top: 0px;">HomePage</p>
+             </div>
+             <div style="text-align: center; display: inline-block;vertical-align:-20px; margin-left: 20px; margin-right: 20px;">
+               <a href="./TechBlog.html" style="vertical-align: middle; font-size: 30px;">综合技术博客</a>
+               <p style="margin-top: 0px;">Mixed Technical Blog</p>  
+             </div>
+             <div style=" text-align: center; display: inline-block; vertical-align:-20px;  margin-left: 20px; margin-right: 20px;">
+               <a href="./LifeBlog.html" style="vertical-align: middle; font-size: 30px;">日常生活博客</a>
+               <p style="margin-top: 0px;">Daily Life Blog</p>
+             </div>
+             <div style="text-align: center; display: inline-block; vertical-align:-20px;  margin-left: 20px; margin-right: 20px;">
+               <a href="./index.html#author" style="vertical-align: middle; font-size: 30px;">关于作者</a> 
+               <p style="margin-top: 0px;">About the author</p>
+             </div>
+           </div>
         <h1 style="text-align: center; color: rgb(41, 107, 168); margin-top: 5px; ">
           Welcome to the Personal Web Page of Haitian Xu 
         </h1>
@@ -32,11 +47,34 @@
       </div>
 
       <!--个人网页指引-->
-      <div style="text-align: center; margin-top: 170px; margin-bottom: 300px;"> 
-        <input type="image" src="./google.png" onclick="window.open('https://www.google.com')" style="vertical-align: middle;" height="60px" width="180px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="image" src="./baidu.png" onclick="window.open('https://www.baidu.com/')" style="vertical-align: middle;" height="130px" width="220px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="image" src="./bili.png" onclick="window.open('https://space.bilibili.com/32387866')" style="vertical-align: middle;" height="80px" width="230px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="image" src="./GitHub-Emblem.png" onclick="window.open('https://github.com/Tonymisaka')" style="vertical-align: middle;" height="110px" width="230px">
+      <div style="text-align: center; margin-top: 200px; margin-bottom: 300px;"> 
+         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+           <a href="https://www.google.com" target="_blank">
+             <img src="google.png" width="180px">
+           </a>
+           <p>Google Search</p>
+         </div>
+
+         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+          <a href="https://www.baidu.com/" target="_blank">
+            <img src="baidu.png" width="200px">
+          </a>
+          <p >Baidu Search</p>
+         </div>
+
+         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+          <a href="https://space.bilibili.com/32387866" target="_blank">
+            <img src="./bili.png" width="200px">
+          </a>
+          <p >Bilibili Homepage</p>
+         </div>
+
+         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+          <a href="https://github.com/Tonymisaka" target="_blank">
+            <img src="./GitHub-Emblem.png" width="220px">
+          </a>
+          <p>Github Homepage</p>
+         </div>
       </div>
      
     
@@ -164,7 +202,8 @@
            [1.10.2022] "Update video size to fit for different window ratio" "remove the Bing iframe page" "Replace old video with new code display"
            "Add raw directive bar and remove the iframe Technical blog to two links" "add about author to the raw bar" "Update download function of the music"
            "remove the colock iframe page"<br>
-           [1.11.2022] "Add email and telephone links to about author"
+           [1.11.2022] "Add email and telephone links to about author"<br>
+           [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"
          </p>
         </div>
       </div>
