--- a/TechBlog.html
+++ b/TechBlog.html
@@ -16,6 +16,12 @@
         {
           color: darkmagenta;
         }
+        body{
+          background-image: url("./backk.png");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+         }
 
     </style>
 </head>
