--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
             TonyMisaka's Web
         </title>
         <style>
+         body{
+          background-image: url("./backk.png");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+         }
          a{
                text-decoration: none;
                color: rgb(92, 58, 146);
@@ -50,14 +56,14 @@
       <div style="text-align: center; margin-top: 200px; margin-bottom: 300px;"> 
          <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
            <a href="https://www.google.com" target="_blank">
-             <img src="google.png" width="180px">
+             <img src="./google.png" width="180px">
            </a>
            <p>Google Search</p>
          </div>
 
          <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
           <a href="https://www.baidu.com/" target="_blank">
-            <img src="baidu.png" width="200px">
+            <img src="./baidu.png" width="200px">
           </a>
           <p >Baidu Search</p>
          </div>
@@ -203,7 +209,8 @@
            "Add raw directive bar and remove the iframe Technical blog to two links" "add about author to the raw bar" "Update download function of the music"
            "remove the colock iframe page"<br>
            [1.11.2022] "Add email and telephone links to about author"<br>
-           [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"
+           [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"<br>
+           [1.13.2022] "Add background to all the pages"
          </p>
         </div>
       </div>
