--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -11,6 +11,12 @@
          text-align: center;
          color: rgb(92, 58, 146);
        }
+       body{
+          background-image: url("./backk.png");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+         }
 
     </style>
   </head>
