--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -28,6 +28,12 @@
       
         color: rgb(63, 63, 63);
     }
+    body{
+          background-image: url("./backk.png");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+         }
 </style>
 </head>
 <body>
