Update tech blog

--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
            "remove the colock iframe page"<br>
            [1.11.2022] "Add email and telephone links to about author"<br>
            [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"<br>
-           [1.13.2022] "Add background to all the pages"
+           [1.13.2022] "Add background to all the pages"<br>
+           [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog"
          </p>
         </div>
       </div>
