--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -11,12 +11,29 @@
          text-align: center;
          color: rgb(92, 58, 146);
        }
+       h3{
+        margin-left: 200px;
+        margin-right:200px;
+
+       }
+
+       h4{
+       margin-left: 200px;
+       margin-right:200px;
+       }
+
+
        body{
           background-image: url("./backk.png");
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: 100% 100%;
          }
+
+       hr{
+         margin-left: 200px;
+         margin-right:200px;
+       }
 
     </style>
   </head>
@@ -54,17 +71,20 @@
    <!--介绍-->
    <div>
      <h3>
-       Introduction<br>
+      1.Introduction<br>
        简介
      </h3>
-     <p>
-       数据结构(Data Structure) 是计算机存储、组织数据的方式。数据结构是指相互之间存在一种或多种特定关系的数据元素的集合。通常情况下，精心选择的数据结构可以带来更高的运行或者存储效率。数据结构往往同高效的检索算法和索引技术有关
-     </p>
-     <p>
-       算法(Algorithm)是指解题方案的准确而完整的描述，是一系列解决问题的清晰指令，算法代表着用系统的方法描述解决问题的策略机制。也就是说，能够对一定规范的输入，在有限时间内获得所要求的输出。如果一个算法有缺陷，或不适合于某个问题，执行这个算法将不会解决这个问题。不同的算法可能用不同的时间、空间或效率来完成同样的任务。一个算法的优劣可以用空间复杂度与时间复杂度来衡量。
-     </p>
+     <h4>
+       数据结构(Data Structure) 是计算机存储、组织数据的方式。数据结构是指相互之间存在一种或多种特定关系的数据元素的集合。通常情况下，精心选择的数据结构可以带来更高的运行或者存储效率。
+     </h4>
+     <h4>
+       算法(Algorithm) 是解决问题的步骤或是对问题解决策略的描述。前后包含了一个状态转化到另一个状态。
+     </h4>
+     <h4>程序约等于数据结构+算法。</h4>
+     <h4>算法的好坏取决于其空间与时间复杂度</h4>
+  
    </div>
-
+   <hr>
 
 
 
