--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
 
       <!--个人网页指引-->
       <div style="text-align: center; margin-top: 200px; margin-bottom: 300px;"> 
-         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+         <div style="display:inline-block; vertical-align: middle; margin-left: 90px; margin-right: 90px;">
            <a href="https://www.google.com" target="_blank">
              <img src="./google.png" width="180px">
            </a>
            <p>Google Search</p>
          </div>
 
-         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+         <div style="display:inline-block; vertical-align: middle; margin-left: 90px; margin-right: 90px;">
           <a href="https://www.baidu.com/" target="_blank">
             <img src="./baidu.png" width="200px">
           </a>
           <p >Baidu Search</p>
          </div>
 
-         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+         <div style="display:inline-block; vertical-align: middle; margin-left: 90px; margin-right: 90px;">
           <a href="https://space.bilibili.com/32387866" target="_blank">
             <img src="./bili.png" width="200px">
           </a>
           <p >Bilibili Homepage</p>
          </div>
 
-         <div style="display:inline-block; vertical-align: middle; margin-left: 75px; margin-right: 75px;">
+         <div style="display:inline-block; vertical-align: middle; margin-left: 90px; margin-right: 90px;">
           <a href="https://github.com/Tonymisaka" target="_blank">
             <img src="./GitHub-Emblem.png" width="220px">
           </a>
@@ -84,16 +84,16 @@
       </div>
      
     
-      <!--代码展示-->
+      <!--近期活动视频展示-->
       <div>
-        <h3 style="color: rgb(41, 107, 168); text-align: center;margin-top: 100px; ">
-        Here are the code of this page [Latest in 2022.1.10]
+        <h3 style="color: rgb(41, 107, 168); text-align: center;margin-top: 150px; ">
+        Recent Fun Event : <b>Snow slide in Elver Park</b> [Latest in 2022.1.15]
         </h3>
          <h3 style="color: rgb(255, 255, 255); text-align: center; text-shadow:3px 3px 3px black;">
-           这是本页代码展示视频
+           近期有趣活动 : <b>在Elver公园玩滑雪板</b>
         </h3>
         <div style="text-align: center; ">
-          <video src="./codeR.mp4" width=80% controls="controls">代码展示</video>
+          <video src="./snowS.mp4" width=80% controls="controls">代码展示</video>
         </div>
       </div>
 
@@ -211,7 +211,7 @@
            [1.11.2022] "Add email and telephone links to about author"<br>
            [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"<br>
            [1.13.2022] "Add background to all the pages"<br>
-           [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog"
+           [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog" "Update video section to recent fun event"
          </p>
         </div>
       </div>
