Adjust display mode

--- a/DataAlgo.html
+++ b/DataAlgo.html
@@ -12,14 +12,14 @@
          color: rgb(92, 58, 146);
        }
        h3{
-        margin-left: 200px;
-        margin-right:200px;
+        margin-left: 10%;
+        margin-right:10%;
 
        }
 
        h4{
-       margin-left: 200px;
-       margin-right:200px;
+       margin-left: 10%;
+       margin-right:10%;
        }
 
 
@@ -31,8 +31,8 @@
          }
 
        hr{
-         margin-left: 200px;
-         margin-right:200px;
+         margin-left: 10%;
+         margin-right:10%;
        }
 
     </style>
