--- a/LifeBlog.html
+++ b/LifeBlog.html
@@ -18,20 +18,20 @@
     h2{
        
         color: rgb(22, 62, 148);
-        margin-left: 200px;
-        margin-right: 200px;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 
     h3{
         color: rgb(22, 148, 131);
         margin-top: 80px;
-        margin-left: 200px;
-        margin-right: 200px;
+        margin-left: 10%;
+        margin-right: 10%;
     }
     h5{
         margin-top: 10px;
-        margin-left: 200px;
-        margin-right: 200px;
+        margin-left: 10%;
+        margin-right: 10%;
         color: rgb(63, 63, 63);
     }
     body{
