--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <!--个人网页指引-->
-      <div style="text-align: center; margin-top: 200px; margin-bottom: 300px;"> 
+      <div style="text-align: center; margin-top: 12%; margin-bottom: 17%;"> 
          <div style="display:inline-block; vertical-align: middle; margin-left: 80px; margin-right: 80px;">
            <a href="https://www.google.com" target="_blank">
              <img src="./google.png" width="180px">
@@ -99,7 +99,7 @@
 
       <!--musicIntro + music《only my railgun》-->
       <div>
-        <h2 style="color: rgb(79, 41, 168); text-align: center;margin-top: 120px; ">
+        <h2 style="color: rgb(79, 41, 168); text-align: center;margin-top: 10%; ">
            Please enjoy Haitian Xu's favourite music
         </h2>
         <h2 style="color: rgb(255, 255, 255); text-align: center; text-shadow:3px 3px 3px black;">
@@ -211,7 +211,7 @@
            [1.11.2022] "Add email and telephone links to about author"<br>
            [1.12.2022] "Add inline block style to the directive bar to fit differnt view" "Update web links with inline block style and english" "add english version to directive bar"<br>
            [1.13.2022] "Add background to all the pages"<br>
-           [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog" "Update video section to recent fun event"
+           [1.15.2022] "Change the margin size of the Life&Tech blog unit and update life blog" "Update video section to recent fun event" "Update margin display to percentage"
          </p>
         </div>
       </div>
