fix search bar bug

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       width:60%;
       background-color: rgb(255, 255, 255);
      border:0px;
-     box-shadow: rgb(216, 216, 216)  0px 0px 8px;">
+     box-shadow: rgb(216, 216, 216)  0px 0px 8px;
+     text-indent:10px;
+     font-size:18px;
+     ">
      &nbsp;
 
       <input type="submit" name="submit" value="Search 搜索" style="  
@@ -84,6 +87,7 @@
       height: 50px;
       width:100px;
       border:9px;
+      font-size: 15px;
      background-color: rgb(255, 255, 255);
      box-shadow: rgb(211, 211, 211) 0px 0px 8px;
 
