--- a/index.html
+++ b/index.html
@@ -54,13 +54,17 @@
                <a href="./index.html#author" style="vertical-align: middle; font-size: 30px;">关于作者</a> 
                <p style="margin-top: 0px;">About the author</p>
              </div>
-           </div>
-        <h1 style="text-align: center; color: rgb(41, 107, 168); margin-top: 5px; ">
-          Welcome to the Personal Web Page of Haitian Xu 
-        </h1>
-        <h1 style="text-align: center; color: rgb(255, 255, 255); vertical-align: auto; text-shadow:3px 3px 3px black;">
-          欢迎来到徐海天的个人主页
-        </h1>
+          </div>
+          <div >  
+               <h1 style="text-align: center; color: rgb(41, 107, 168); margin-top: 5px; ">
+                Welcome to the Personal Web Page of Haitian Xu 
+                </h1>
+               <h1 style="text-align: center; color: rgb(255, 255, 255); vertical-align: auto; text-shadow:3px 3px 3px black;">
+               欢迎来到徐海天的个人主页
+                 </h1>
+          </div>
+     
+   
       </div>
 
 <!--表单使用百度搜索试验-->
